@@ -1,3 +1,8 @@
+2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCOpt.c:
+	  Preserve block number when replacing iCode.
+
 2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c,
